force-app/main/default/objects/Opportunity_Email_Message__c/Opportunity_Email_Message__c.object-meta.xml
<CustomObject>
    <description>Opportunity email messages</description>
    <label>Opportunity Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>